--- a/pages/tableau.html
+++ b/pages/tableau.html
@@ -226,8 +226,7 @@
             </div>
             <script type="text/javascript">
               (function () {
-                var originalW = 1200,
-                  originalH = 727;
+                var originalW = 1200, originalH = 727;
                 var ratio = originalH / originalW;
                 var divElement = document.getElementById("viz1761839611950");
                 var vizElement = divElement.getElementsByTagName("object")[0];
@@ -275,8 +274,7 @@
             </div>
             <script type="text/javascript">
               (function () {
-                var originalW = 1200,
-                  originalH = 827;
+                var originalW = 1200, originalH = 827;
                 var ratio = originalH / originalW;
                 var divElement = document.getElementById("viz1761839572870");
                 var vizElement = divElement.getElementsByTagName("object")[0];
@@ -322,8 +320,7 @@
             </div>
             <script type="text/javascript">
               (function () {
-                var originalW = 1200,
-                  originalH = 827;
+                var originalW = 1200, originalH = 827;
                 var ratio = originalH / originalW;
                 var divElement = document.getElementById("viz1761839559260");
                 var vizElement = divElement.getElementsByTagName("object")[0];
@@ -343,42 +340,22 @@
 
             <script type="text/javascript">
               (function () {
-                var originalW = 1600,
-                  originalH = 927;
-                var ratio = originalH / originalW;
+                var ratio = 927 / 1600; // original large width/height ratio
                 var divElement = document.getElementById("viz1761785356118");
                 var vizElement = divElement.getElementsByTagName("object")[0];
-                var containerWidth = divElement.offsetWidth;
-                var refWidth = Math.min(containerWidth, originalW);
-                if (refWidth === originalW) {
-                  vizElement.style.width = originalW + "px";
-                } else {
-                  vizElement.style.width = "100%";
-                }
-                vizElement.style.maxWidth = "none";
-                vizElement.style.margin = "0";
-                vizElement.style.display = "block";
-                vizElement.style.height = Math.max(300, Math.round(refWidth * ratio)) + "px";
+                var width = divElement.offsetWidth;
+                vizElement.style.width = "100%";
+                vizElement.style.height = Math.max(300, Math.round(width * ratio)) + "px";
               })();
             </script>
             <script type="text/javascript">
               (function () {
-                var originalW = 1200,
-                  originalH = 827;
-                var ratio = originalH / originalW;
+                var ratio = 827 / 1200; // original large width/height ratio
                 var divElement = document.getElementById("viz1761780253443");
                 var vizElement = divElement.getElementsByTagName("object")[0];
-                var containerWidth = divElement.offsetWidth;
-                var refWidth = Math.min(containerWidth, originalW);
-                if (refWidth === originalW) {
-                  vizElement.style.width = originalW + "px";
-                } else {
-                  vizElement.style.width = "100%";
-                }
-                vizElement.style.maxWidth = "none";
-                vizElement.style.margin = "0";
-                vizElement.style.display = "block";
-                vizElement.style.height = Math.max(300, Math.round(refWidth * ratio)) + "px";
+                var width = divElement.offsetWidth;
+                vizElement.style.width = "100%";
+                vizElement.style.height = Math.max(300, Math.round(width * ratio)) + "px";
               })();
             </script>
             <script>
